# clickinator-3000

./: .gitignore  index.html  package.json
src/: main.ts  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/system/: autoclicker.rs  mod.rs
