[package]
name = "clickinator-3000"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clickinator_3000_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
device_query = "3.0.0"
autopilot = "0.4.0"
leptos = { version="0.7.7", features= ["ssr"] }
leptos_axum = "0.7.7"
leptos_meta = "0.7.7"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
axum-server = "0.7.1"

